--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
+    <h1 class="title">До победы осталось</h1>
 
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
