--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -10,8 +10,10 @@
     <p><a href="index.html">Go back</a></p>
     <h1 class="title">До победы осталось</h1>
 
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <div class="wrap">
+      <input type="text" id="datetime-picker" />
+      <button type="button" data-start>Start</button>
+    </div>
 
     <div class="timer">
       <div class="field">
